[log] font yekan added , fixed overflow on the card , fix index.html

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -3,6 +3,17 @@
 	src: url("https://cdn.jsdelivr.net/npm/iransans@1.0.0/woff2/IRANSansWeb.woff2");
 }
 
+@font-face {
+	font-family: "BYekan";
+	src: url("../font/BYekan.eot");
+	src: url("../font/BYekan.eot?#iefix") format("embedded-opentype"),
+		url("../font/BYekan.woff") format("woff"),
+		url("../font/BYekan.ttf") format("truetype"),
+		url("../font/BYekan.svg#BYekan") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
 html, body {
 	scroll-behavior: smooth;
 	font-family: iransans;
@@ -369,25 +380,6 @@ input::after {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
-
-.bi-background-gradient {
-	// bg-gradient-to-t from-white via-white to-transparent
-	background: rgb(34, 193, 195);
-	background: linear-gradient(
-		112deg,
-		rgba(34, 193, 195, 1) 0%,
-		rgba(224, 26, 251, 1) 100%
-	);
-}
-
-.bi-background-gradient:hover {
-		background: rgb(63, 94, 251);
-		background: radial-gradient(
-			circle,
-			rgba(63, 94, 251, 1) 0%,
-			rgba(255, 126, 152, 0) 100%
-		);
-	}
 
 .bi-headline_intro {
 	display: flex;
@@ -1578,6 +1570,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 	top: -8rem;
 }
 
+.top-8 {
+	top: 2rem;
+}
+
+.bottom-4 {
+	bottom: 1rem;
+}
+
+.right-4 {
+	right: 1rem;
+}
+
 .-top-28 {
 	top: -7rem;
 }
@@ -1596,14 +1600,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bottom-9 {
 	bottom: 2.25rem;
-}
-
-.right-4 {
-	right: 1rem;
-}
-
-.bottom-4 {
-	bottom: 1rem;
 }
 
 .top-2 {
@@ -1776,6 +1772,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-2 {
 	margin-bottom: 0.5rem;
+}
+
+.ml-auto {
+	margin-left: auto;
 }
 
 .mt-auto {
@@ -2181,16 +2181,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-8 {
-	--tw-translate-y: 2rem;
-	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-2 {
-	--tw-translate-y: -0.5rem;
-	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .translate-y-full {
 	--tw-translate-y: 100%;
 	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2490,6 +2480,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 	border-radius: 50%;
 }
 
+.rounded {
+	border-radius: 0.25rem;
+}
+
 .rounded-md {
 	border-radius: 0.375rem;
 }
@@ -2500,10 +2494,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-xl {
 	border-radius: 0.75rem;
-}
-
-.rounded {
-	border-radius: 0.25rem;
 }
 
 .border {
@@ -2646,6 +2636,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
+}
+
+.bg-opacity-75 {
+	--tw-bg-opacity: 0.75;
 }
 
 .bg-gradient-to-t {
@@ -2937,6 +2931,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .align-middle {
 	vertical-align: middle;
+}
+
+.font-yekan {
+	font-family: BYekan;
 }
 
 .font-iransans {
@@ -4185,11 +4183,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 	.lg\:max-w-\[150px\] {
 		max-width: 150px;
-	}
-
-	.lg\:translate-y-4 {
-		--tw-translate-y: 1rem;
-		transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	}
 
 	.lg\:grid-cols-4 {
